@@ -1,11 +1,14 @@
 package datum.config;
 
-import datum.user.UserRepository;
+import datum.app.clinic.service.PrivilegeService;
+import datum.authenticate.UserRepository;
+import datum.config.audit.SpringSecurityAuditorAware;
+import datum.config.exception.Message;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.context.annotation.Description;
-import org.springframework.context.support.ResourceBundleMessageSource;
+import org.springframework.data.domain.AuditorAware;
+import org.springframework.data.jpa.repository.config.EnableJpaAuditing;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
@@ -17,20 +20,40 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.servlet.handler.MappedInterceptor;
+//import springfox.documentation.builders.PathSelectors;
+//import springfox.documentation.builders.RequestHandlerSelectors;
+//import springfox.documentation.spi.DocumentationType;
+//import springfox.documentation.spring.web.plugins.Docket;
 
-import java.util.Arrays;
+import java.util.List;
 
-
+////@Configuration
+//@EnableWebSecurity
+////@RequiredArgsConstructor
+//@EnableMethodSecurity
 @Configuration
+//@EnableTransactionManagement
+//@EnableJpaRepositories
+@EnableJpaAuditing(auditorAwareRef = "auditorProvider")
 @RequiredArgsConstructor
+
 public class ApplicationConfig {
 
     private final UserRepository repository;
+    private final PrivilegeService privilegeService;
+
+
+
+    @Bean
+    public AuditorAware<Long> auditorProvider() {
+        return new SpringSecurityAuditorAware();
+    }
 
     @Bean
     public UserDetailsService userDetailsService() {
         return email -> repository.findByEmailIgnoreCase(email)
-                .orElseThrow(() -> new UsernameNotFoundException("Пользователь не найден"));
+                .orElseThrow(() -> new UsernameNotFoundException(Message.USER_NOT_FOUND));
     }
 
     @Bean
@@ -51,20 +74,29 @@ public class ApplicationConfig {
         return new BCryptPasswordEncoder();
     }
     @Bean
-    @Description("Spring Message Resolver")
-    public ResourceBundleMessageSource messageSource() {
-        ResourceBundleMessageSource messageSource = new ResourceBundleMessageSource();
-        messageSource.setBasename("messages");
-        return messageSource;
-    }
-    @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("*"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedOrigins(List.of("*"));
+        configuration.setAllowedMethods(List.of("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
+//    @Bean
+//    public Docket api() {
+//        return new Docket(DocumentationType.SWAGGER_2)
+//                .select()
+//                .apis(RequestHandlerSelectors.any())
+//                .paths(PathSelectors.any())
+//                .build();
+//    }
+    @Bean
+    public MappedInterceptor mappedResponseHeaderInterceptor() {
+        return new MappedInterceptor(
+                new String[] { "/CLINIC/**",},
+                new ClinicInterceptor(privilegeService)
+        );
+    }
+
 }
